<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_rounded_black_back"
        android:gravity="center"
        android:padding="@dimen/dim_30">

        <TextView
            android:id="@+id/txt_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_warning"
            android:drawablePadding="@dimen/dim_5"
            android:gravity="center"
            android:text="@string/str_warning"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_rounded_white_back"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dim_20"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/txt_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_20"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:paddingLeft="@dimen/dim_20"
            android:paddingRight="@dimen/dim_20"
            android:textAllCaps="false"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txt_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_10"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:paddingLeft="@dimen/dim_20"
            android:paddingRight="@dimen/dim_20"
            android:textAllCaps="false"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:gravity="center"
            android:paddingBottom="@dimen/dim_10"
            android:weightSum="3"
            app:layout_constraintHorizontal_bias="1.0">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_assistant_on"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="?selectableItemBackground"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/str_wifi_assistance" />

                <RelativeLayout
                    android:layout_width="50dp"
                    android:layout_height="wrap_content">

                    <Switch
                        android:id="@+id/switch_on"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:trackTint="@color/colorPrimary" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/switch_on"
                        android:layout_alignParentEnd="true"
                        android:layout_marginLeft="@dimen/dim_10"
                        android:src="@drawable/ic_close" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_assistant_off"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackground"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/str_wifi_assistance"
                    android:textColor="?attr/colorAccent" />

                <RelativeLayout
                    android:layout_width="50dp"
                    android:layout_height="wrap_content">

                    <Switch
                        android:id="@+id/switch_off"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:trackTint="@color/colorPrimary" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/switch_off"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="@dimen/dim_10"
                        android:src="@drawable/ic_check_black" />
                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_off"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dim_10"
            android:layout_marginRight="@dimen/dim_10"
            android:background="@color/colorPrimary"
            android:text="@string/str_go_to_turn_off"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>


